packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_missing_custom_inlined_functions.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1343
expression: output
---
==INPUT==


import { component$ as Component, $ as onRender, useStore, wrap, useEffect } from '@qwik.dev/core';


export const useMemo$ = (qrt) => {
	useEffect(qrt);
};

export const App = component$((props) => {
	const state = useStore({count: 0});
	useMemo$(() => {
		console.log(state.count);
	});
	return $(() => (
		<div>{state.count}</div>
	));
});

============================= test.js ==

import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore, useEffect } from '@qwik.dev/core';
//
export const useMemo$ = (qrt)=>{
    useEffect(qrt);
};
export const App = component$((props)=>{
    const state = useStore({
        count: 0
    });
    useMemo$(()=>{
        console.log(state.count);
    });
    return $(()=>/*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(state, "count"), 3, "u6_0"));
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AACA,SAAiD,QAAQ,EAAQ,SAAS,QAAQ,iBAAiB;;AAGnG,OAAO,MAAM,WAAW,CAAC;IACxB,UAAU;AACX,EAAE;AAEF,OAAO,MAAM,MAAM,WAAW,CAAC;IAC9B,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAChC,SAAS;QACR,QAAQ,GAAG,CAAC,MAAM,KAAK;IACxB;IACA,OAAO,EAAE,kBACR,WAAC,6BAAK;AAER,GAAG\"}")
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C05",
    "file": "test.tsx",
    "message": "Found 'useMemo$' but did not find the corresponding 'useMemoQrl' exported in the same file. Please check that it is exported and spelled correctly",
    "highlights": [
      {
        "lo": 241,
        "hi": 249,
        "startLine": 11,
        "startCol": 5,
        "endLine": 11,
        "endCol": 12
      }
    ],
    "suggestions": null,
    "scope": "optimizer"
  }
]
