packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_mutable_children.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2496
expression: output
---
==INPUT==


import { component$, useStore, Slot, Fragment } from '@qwik.dev/core';
import Image from './image.jpg?jsx';

export function Fn1(props: Stuff) {
	return (
		<>
			<div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>
		</>
	);
}

export function Fn2(props: Stuff) {
	return (
		<div>{prop.value && <Stuff></Stuff>}<div></div></div>
	);
}

export function Fn3(props: Stuff) {
	if (prop.value) {
		return (
			<Stuff></Stuff>
		);
	}
	return (
		<div></div>
	);
}

export function Fn4(props: Stuff) {
	if (prop.value) {
		return (
			<div></div>
		);
	}
	return (
		<Stuff></Stuff>
	);
}

export const Arrow = (props: Stuff) => <div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>;

export const AppDynamic1 = component$((props: Stuff) => {
	return (
		<>
			<div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>
		</>
	);
});
export const AppDynamic2 = component$((props: Stuff) => {
	return (
		<div>{prop.value && <Stuff></Stuff>}<div></div></div>
	);
});

export const AppDynamic3 = component$((props: Stuff) => {
	if (prop.value) {
		return (
			<Stuff></Stuff>
		);
	}
	return (
		<div></div>
	);
});

export const AppDynamic4 = component$((props: Stuff) => {
	if (prop.value) {
		return (
			<div></div>
		);
	}
	return (
		<Stuff></Stuff>
	);
});

export const AppStatic = component$((props: Stuff) => {
	return (
		<>
			<div>Static {f ? 1 : 3}</div>
			<div>{prop < 2 ? <p>1</p> : <p>2</p>}</div>

			<div>{prop.value && <div></div>}</div>
			<div>{prop.value && <Fragment><Slot></Slot></Fragment>}</div>
			<div>{prop.value && <><div></div></>}</div>
			<div>{prop.value && <Image/>}</div>
			<div>Static {f ? 1 : 3}</div>
			<div>Static</div>
			<div>Static {props.value}</div>
			<div>Static {stuff()}</div>
			<div>Static {stuff()}</div>
		</>
	);
});

============================= test.js ==

import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { Slot, Fragment } from '@qwik.dev/core';
import Image from './image.jpg?jsx';
//
const q_AppDynamic1_component_R00UJ05gbes = /*#__PURE__*/ _noopQrl("AppDynamic1_component_R00UJ05gbes");
const q_AppDynamic2_component_3EY2zm0v00A = /*#__PURE__*/ _noopQrl("AppDynamic2_component_3EY2zm0v00A");
const q_AppDynamic3_component_FVq83NlbTDQ = /*#__PURE__*/ _noopQrl("AppDynamic3_component_FVq83NlbTDQ");
const q_AppDynamic4_component_IO0yr8UvWEI = /*#__PURE__*/ _noopQrl("AppDynamic4_component_IO0yr8UvWEI");
const q_AppStatic_component_gYRXqF3G5nE = /*#__PURE__*/ _noopQrl("AppStatic_component_gYRXqF3G5nE");
//
export function Fn1(props) {
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, "u6_0") : /*#__PURE__*/ _jsxSorted(Stuff, null, null, "2", 3, "u6_1"), 1, null), 1, "u6_2");
}
export function Fn2(props) {
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        prop.value && /*#__PURE__*/ _jsxSorted(Stuff, null, null, null, 3, "u6_3"),
        /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)
    ], 1, "u6_4");
}
export function Fn3(props) {
    if (prop.value) return /*#__PURE__*/ _jsxSorted(Stuff, null, null, null, 3, "u6_5");
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_6");
}
export function Fn4(props) {
    if (prop.value) return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_7");
    return /*#__PURE__*/ _jsxSorted(Stuff, null, null, null, 3, "u6_8");
}
export const Arrow = (props)=>/*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, "u6_9") : /*#__PURE__*/ _jsxSorted(Stuff, null, null, "2", 3, "u6_10"), 1, "u6_11");
const AppDynamic1_component_R00UJ05gbes = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, "u6_12") : /*#__PURE__*/ _jsxSorted(Stuff, null, null, "2", 3, "u6_13"), 1, null), 1, "u6_14");
};
q_AppDynamic1_component_R00UJ05gbes.s(AppDynamic1_component_R00UJ05gbes);
export const AppDynamic1 = /*#__PURE__*/ componentQrl(q_AppDynamic1_component_R00UJ05gbes);
const AppDynamic2_component_3EY2zm0v00A = (props)=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        prop.value && /*#__PURE__*/ _jsxSorted(Stuff, null, null, null, 3, "u6_15"),
        /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)
    ], 1, "u6_16");
};
q_AppDynamic2_component_3EY2zm0v00A.s(AppDynamic2_component_3EY2zm0v00A);
export const AppDynamic2 = /*#__PURE__*/ componentQrl(q_AppDynamic2_component_3EY2zm0v00A);
const AppDynamic3_component_FVq83NlbTDQ = (props)=>{
    if (prop.value) return /*#__PURE__*/ _jsxSorted(Stuff, null, null, null, 3, "u6_17");
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_18");
};
q_AppDynamic3_component_FVq83NlbTDQ.s(AppDynamic3_component_FVq83NlbTDQ);
export const AppDynamic3 = /*#__PURE__*/ componentQrl(q_AppDynamic3_component_FVq83NlbTDQ);
const AppDynamic4_component_IO0yr8UvWEI = (props)=>{
    if (prop.value) return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_19");
    return /*#__PURE__*/ _jsxSorted(Stuff, null, null, null, 3, "u6_20");
};
q_AppDynamic4_component_IO0yr8UvWEI.s(AppDynamic4_component_IO0yr8UvWEI);
export const AppDynamic4 = /*#__PURE__*/ componentQrl(q_AppDynamic4_component_IO0yr8UvWEI);
const AppStatic_component_gYRXqF3G5nE = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "Static ",
            f ? 1 : 3
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, "u6_21") : /*#__PURE__*/ _jsxSorted("p", null, null, "2", 3, "u6_22"), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_23"), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted(Fragment, null, null, /*#__PURE__*/ _jsxSorted(Slot, null, null, null, 3, "u6_24"), 1, "u6_25"), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null), 3, "u6_26"), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted(Image, null, null, null, 3, "u6_27"), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "Static ",
            f ? 1 : 3
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, "Static", 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "Static ",
            _wrapProp(props)
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "Static ",
            stuff()
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "Static ",
            stuff()
        ], 1, null)
    ], 1, "u6_28");
};
q_AppStatic_component_gYRXqF3G5nE.s(AppStatic_component_gYRXqF3G5nE);
export const AppStatic = /*#__PURE__*/ componentQrl(q_AppStatic_component_gYRXqF3G5nE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAA+B,IAAI,EAAE,QAAQ,QAAQ,iBAAiB;AACtE,OAAO,WAAW,kBAAkB;;;;;;;;AAEpC,OAAO,SAAS,IAAI,KAAY;IAC/B,qBACC,gDACC,WAAC,mBAAK,OAAO,kBAAI,WAAC,iBAAE,gCAAQ,WAAC,mBAAM;AAGtC;AAEA,OAAO,SAAS,IAAI,KAAY;IAC/B,qBACC,WAAC;QAAK,KAAK,KAAK,kBAAI,WAAC;sBAAe,WAAC;;AAEvC;AAEA,OAAO,SAAS,IAAI,KAAY;IAC/B,IAAI,KAAK,KAAK,EACb,qBACC,WAAC;IAGH,qBACC,WAAC;AAEH;AAEA,OAAO,SAAS,IAAI,KAAY;IAC/B,IAAI,KAAK,KAAK,EACb,qBACC,WAAC;IAGH,qBACC,WAAC;AAEH;AAEA,OAAO,MAAM,QAAQ,CAAC,sBAAiB,WAAC,mBAAK,OAAO,kBAAI,WAAC,iBAAE,gCAAQ,WAAC,mBAAM,8BAAiB;0CAErD,CAAC;IACtC,qBACC,gDACC,WAAC,mBAAK,OAAO,kBAAI,WAAC,iBAAE,iCAAQ,WAAC,mBAAM;AAGtC;;AANA,OAAO,MAAM,4BAAc,kDAMxB;0CACmC,CAAC;IACtC,qBACC,WAAC;QAAK,KAAK,KAAK,kBAAI,WAAC;sBAAe,WAAC;;AAEvC;;AAJA,OAAO,MAAM,4BAAc,kDAIxB;0CAEmC,CAAC;IACtC,IAAI,KAAK,KAAK,EACb,qBACC,WAAC;IAGH,qBACC,WAAC;AAEH;;AATA,OAAO,MAAM,4BAAc,kDASxB;0CAEmC,CAAC;IACtC,IAAI,KAAK,KAAK,EACb,qBACC,WAAC;IAGH,qBACC,WAAC;AAEH;;AATA,OAAO,MAAM,4BAAc,kDASxB;wCAEiC,CAAC;IACpC,qBACC;sBACC,WAAC;YAAI;YAAQ,IAAI,IAAI;;sBACrB,WAAC,mBAAK,OAAO,kBAAI,WAAC,iBAAE,iCAAQ,WAAC,iBAAE;sBAE/B,WAAC,mBAAK,KAAK,KAAK,kBAAI,WAAC;sBACrB,WAAC,mBAAK,KAAK,KAAK,kBAAI,WAAC,oCAAS,WAAC;sBAC/B,WAAC,mBAAK,KAAK,KAAK,kBAAI,gDAAE,WAAC;sBACvB,WAAC,mBAAK,KAAK,KAAK,kBAAI,WAAC;sBACrB,WAAC;YAAI;YAAQ,IAAI,IAAI;;sBACrB,WAAC,mBAAI;sBACL,WAAC;YAAI;sBAAQ;;sBACb,WAAC;YAAI;YAAQ;;sBACb,WAAC;YAAI;YAAQ;;;AAGhB;;AAjBA,OAAO,MAAM,0BAAY,gDAiBtB\"}")
== DIAGNOSTICS ==

[]
